Fix colour contrast issue on archive tag count (#74)

--- a/src/styles/partials/_tag_list.scss
+++ b/src/styles/partials/_tag_list.scss
@@ -18,6 +18,10 @@
       &:focus {
         background: var(--link-color);
         color: var(--background-color);
+
+        .count {
+          color: var(--background-color);
+        }
       }
 
       .count {
